@@ -9,7 +9,7 @@ public class TestOutilsFiltrerString {
 
 	@Before
 	public void setUp() {
-		nombres = List.of("un", "deux", "trois", "quatre", "cinq", "six", "sept");
+		nombres = new ArrayList<>( Arrays.asList("un", "deux", "trois", "quatre", "cinq", "six", "sept") );
 		deLongueur4 = new Critere<String>() {
 			@Override public boolean satisfaitSur(String s) {
 				return s.length() == 4;
@@ -22,7 +22,7 @@ public class TestOutilsFiltrerString {
 		List<String> mots4 = new ArrayList<>();
 		Outils.filtrer(nombres, deLongueur4, mots4);
 		assertEquals(3, mots4.size());
-		assertEquals(List.of("deux", "cinq", "sept"), mots4);
+		assertEquals(new ArrayList<>( Arrays.asList("deux", "cinq", "sept") ), mots4);
 	}
 
 }
